post-ct-recipe