@@ -131,7 +131,7 @@ public class ObsTest {
 		} else if (field.getType().equals(Obs.Status.class)) {
 			fieldValue = setAlternateValue ? Obs.Status.AMENDED : Obs.Status.PRELIMINARY;
 		} else {
-			fieldValue = field.getType().newInstance();
+			fieldValue = field.getType().getDeclaredConstructor().newInstance();
 		}
 		assertNotNull("Failed to generate a value for field: Obs." + field.getName());
 		
@@ -361,7 +361,7 @@ public class ObsTest {
 		c.setDatatype(cdt);
 
 		Obs obs = new Obs();
-		obs.setConcept(c);;
+		obs.setConcept(c);
 
 		assertThrows(RuntimeException.class, () -> obs.setValueAsString("\r\n"));
 	}
@@ -935,7 +935,7 @@ public class ObsTest {
         obs.setAccessionNumber("4849RDD");          
         obs.setValueCoded(new Concept());                  
         obs.setValueDrug(new Drug());                      
-        obs.setValueGroupId(new  Integer(23));
+        obs.setValueGroupId(Integer.valueOf(23));
         obs.setValueDatetime(new Date());
         obs.setValueModifier("djfsihdihd");              
         obs.setValueText("xyzABC");
