@@ -40,7 +40,7 @@ public class SchemaOnlyTuner extends AbstractSnapshotTuner {
 	}
 	
 	Document detachChangeSet(Document document, String tableName) {
-		XPath xPath = DocumentHelper.createXPath(String.format("//dbchangelog:createTable[@tableName=\"%s\"]", tableName));
+		XPath xPath = DocumentHelper.createXPath("//dbchangelog:createTable[@tableName=\"%s\"]".formatted(tableName));
 		xPath.setNamespaceURIs(getNamespaceUris());
 		
 		Node node = xPath.selectSingleNode(document);
@@ -60,10 +60,10 @@ public class SchemaOnlyTuner extends AbstractSnapshotTuner {
 
 			String defaultValue = parent.attributeValue("defaultValueNumeric");
 			if (defaultValue != null) {
-				if (defaultValue.equals("1")) {
+				if ("1".equals(defaultValue)) {
 					parent.addAttribute("defaultValueBoolean", "true");
 					parent.remove(parent.attribute("defaultValueNumeric"));
-				} else if (defaultValue.equals("0")) {
+				} else if ("0".equals(defaultValue)) {
 					parent.addAttribute("defaultValueBoolean", "false");
 					parent.remove(parent.attribute("defaultValueNumeric"));
 				}
@@ -99,14 +99,13 @@ public class SchemaOnlyTuner extends AbstractSnapshotTuner {
 	 * @return a boolean value for unit testing
 	 */
 	boolean assertLongtextNodes(List<Node> nodes) {
-		assert nodes.size() == 2 : String
-		        .format("replacing the column type 'LONGTEXT' failed as the number of nodes is not 2 but %d", nodes.size());
+		assert nodes.size() == 2 : "replacing the column type 'LONGTEXT' failed as the number of nodes is not 2 but %d"
+			.formatted(nodes.size());
 		
 		Node node = nodes.get(0);
 		Element grandParent = node.getParent().getParent();
 		
-		assert grandParent.attributeValue("tableName").equals(
-		    "clob_datatype_storage") : "replacing the column type 'LONGTEXT' failed as the node does not refer to the 'clob_datatype_storage' table";
+		assert "clob_datatype_storage".equals(grandParent.attributeValue("tableName")) : "replacing the column type 'LONGTEXT' failed as the node does not refer to the 'clob_datatype_storage' table";
 		
 		return true;
 	}
